configuration.

* Major changes in 0.65.0

  1) Add support for build profiles. The specified profile is used
      in the build if -P or --profiles is passed or the
      DEB_BUILD_PROFILES environment variable is set.

  2) An Extra build-time repository and/or individual packages can be
      made available during the build. See the --extra-repository and
      --extra-package options.

  3) External commands have Chroot dir, Build dir and pkgbuild
      dir available as ENV vars.

* Major changes in 0.64.3:

  1) Add support for multiarch builds. Explicit build-deps on
      foreign-arch packages enable that arch for the build.

  2) Command hook changes: chroot-setup-commands run as root. 2 new
      user -command hooks run immediately before/after inner build
      (--starting-build-commands/--finished-build-commands).

* Major changes in 0.64.2:

  1) Allow to Define custom debootstrap variant.

  2) Allow to define custom suffixes in chroot names.

* Major changes in 0.64.1:

  1) Bugfixes to work with Perl 5.18; use File::Temp and File::Spec
     explicitly.

  2) Drop autoflush workaround added for Perl 5.10.

* Major changes in 0.64.0:

  1) The number of times buildd will try to build before sleeping is
     now configurable with MAX_SBUILD_FAILS.

  2) Lintian is now run inside the chroot rather than the host system.

  3) binNMUs now set binary-only=yes in the changelog.

  4) Cross-building improvements.

* Major changes in 0.63.2:

  1) New options --no-run-lintian and --no-run-piuparts.  If lintian
     or piuparts are configured to run automatically following a
     successful build, there options disable this behaviour for the
     build.

  2) New option --purge-build.  This behaves identically to the old
     --purge option.  --purge now purges everything (build directory,
     build dependencies and schroot session) and is equivalent to
     using --purge-build, --purge-deps and --purge-session together.
