@@ -17,8 +17,10 @@ configuration.
       made available during the build. See the --extra-repository and
       --extra-package options.
 
-  3) External commands have Chroot dir, Build dir and pkgbuild
-      dir available as ENV vars.
+  3) Add more substitution variables for use in External commands: 
+      host architecture (%a), chroot directory (%r), build directory inside 
+      chroot (%b), and package build directory inside chroot (%p). See man 
+      sbuild for details and alternate long names.
 
 * Major changes in 0.64.3:
 
